# geometry-visualization-server

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  docker-test.sh  format.sh
examples/: CMakeLists.txt
examples/common/: test_scene.cpp  test_scene.hpp
examples/cpp11_client/: main.cpp
examples/display_window/: main.cpp
examples/intersection/: main_window.cpp  main_window.hpp
examples/primitives/: main_window.cpp  main_window.hpp
examples/scene/: main.h  main_window.cpp  main_window.h  main_window.hpp
examples/tmp_demo/: main.cpp
protos/: CMakeLists.txt
protos/gvs/: primitive_types.proto  result.proto  scene.proto  types.proto
protos/testing/: testing.proto
src/: CMakeLists.txt  gvs_paths.hpp.in  resources.conf
src/exec/: display.cpp  log_test.cpp  message_client.cpp  run_gvs.cpp  scene_server.cpp  tridexel_viewer.cpp  visualiser_client.cpp  visualiser_client_and_server.cpp
src/exec/logging_examples/: log_test.cpp  mesh_test.cpp  mesh_test_17.cpp
src/gvs/: forward_declarations.hpp  item_defaults.hpp
src/gvs/common/: apply.hpp  atomic_data.hpp  callback_handler.hpp  dual_grpc_client.hpp  grpc_client.cpp  grpc_client.hpp  grpc_server.cpp  grpc_server.hpp
src/gvs/display/: camera_package.cpp  camera_package.hpp  display_scene.cpp  display_scene.hpp  display_window.cpp  display_window.hpp  forward_declarations.hpp  geometry_display.cpp  geometry_display.hpp  geometry_item_stream.cpp  geometry_item_stream.hpp  geometry_logger.hpp  local_scene.cpp  local_scene.hpp  log_params.hpp  magnum_conversions.cpp  magnum_conversions.hpp  make_primitive.cpp  make_primitive.hpp  param_checkers.hpp  param_getters.hpp  param_setters.hpp  scene.cpp  scene.hpp  scene_core.cpp  scene_core.hpp  scene_display.hpp  scene_info_helpers.cpp  scene_info_helpers.hpp  scene_info_sender.hpp  scene_interface.hpp  scene_logger.cpp  scene_logger.hpp  scene_update_func.hpp  scene_util.cpp  scene_util.h  scene_util.hpp  send.cpp  send.hpp  settable_types.hpp  (+1 more)
src/gvs/display/backends/: backend_interface.hpp  display_backend.hpp  drawables.cpp  drawables.hpp  empty_backend.cpp  empty_backend.hpp  general_shader_3d.cpp  general_shader_3d.hpp  opengl_backend.cpp  opengl_backend.hpp  to_magnum.cpp  to_magnum.hpp
src/gvs/display/net/: scene_server.cpp  scene_server.hpp
src/gvs/gui/: error_alert.cpp  error_alert.hpp  error_alert_recorder.cpp  error_alert_recorder.hpp  imgui_utils.cpp  imgui_utils.hpp  scene_gui.cpp  scene_gui.hpp
src/gvs/log/: float_types.hpp  geometry_item_stream.cpp  geometry_item_stream.hpp  geometry_logger.cpp  geometry_logger.hpp  geometry_stream.cpp  geometry_stream.hpp  log_params.cpp  log_params.hpp  message_stream.cpp  message_stream.hpp  send.cpp  send.hpp
src/gvs/net/: client_scene.cpp  client_scene.hpp  dual_grpc_client.hpp  grpc_async_server.hpp  grpc_client.cpp  grpc_client.hpp  grpc_client_state.hpp  grpc_client_stream.hpp  grpc_server.cpp  grpc_server.hpp  scene_client.cpp  scene_client.hpp  type_conversions.cpp  type_conversions.hpp
src/gvs/net/detail/: async_handler.hpp  async_rpc_handler_interface.hpp  non_stream_rpc_handler.hpp  rpc_handler_interface.hpp  stream_handler.hpp  stream_rpc_handler.hpp  tag.cpp  tag.hpp
src/gvs/optix/ptx/: default_programs.cu  hit_programs.cu  intersection_refinement.h  ray_types.hpp  triangle_mesh.cu
src/gvs/optix/scene/: optix_backend.cpp  optix_backend.hpp  optix_scene.cpp  optix_scene.hpp  scoped_optix_handle.hpp
src/gvs/scene/: client_scene.cpp  client_scene.hpp  forward_declarations.hpp  local_scene.cpp  local_scene.hpp  log_params.hpp  nil_scene.cpp  nil_scene.hpp  param_checkers.hpp  param_getters.hpp  param_setters.hpp  primitive_types.hpp  scene.cpp  scene.hpp  scene_core.cpp  scene_core.hpp  scene_display.hpp  scene_id.cpp  scene_id.hpp  scene_info_helpers.cpp  scene_info_helpers.hpp  scene_update_handler.cpp  scene_update_handler.hpp  scene_util.cpp  settable_types.cpp  settable_types.hpp  types.hpp
src/gvs/scene/backends/: backend_interface.hpp  drawables.cpp  drawables.hpp  general_shader_3d.cpp  general_shader_3d.hpp  opengl_backend.cpp  (+3 more)
src/gvs/server/: client_stream.hpp  scene_server.cpp  scene_server.hpp  scene_service.cpp  scene_service.hpp
src/gvs/shaders/: general_shader.frag  general_shader.vert
src/gvs/util/: apply.hpp  atomic_data.cpp  atomic_data.hpp  blocking_queue.hpp  callback_handler.hpp  container_util.hpp  error.cpp  error.hpp  generic_guard.cpp  generic_guard.hpp  make_unique.hpp  proto_util.hpp  result.hpp  result_11.hpp  string.hpp  variant_utils.hpp
src/gvs/vis-client/: imgui_magnum_application.cpp  imgui_magnum_application.hpp  imgui_theme.cpp  imgui_theme.hpp  imgui_utils.cpp  imgui_utils.hpp  opengl_scene.cpp  opengl_scene.hpp  scene.cpp  scene.hpp  vis_client.cpp  vis_client.hpp
src/testing/: gvs_net_tests.cpp  gvs_net_tests.hpp  gvs_test_util_tests.cpp  gvs_test_util_tests.hpp  gvs_tests.cpp
src/testing/util/: test_proto_util.hpp  test_server.cpp  test_server.hpp  test_service.cpp  test_service.hpp
src/ui/: mainwindow.ui  resources.qrc  tridexel_viewer_window.cpp  tridexel_viewer_window.hpp
src/ui/qml/: TestForm.ui.qml  dataflow.qml  machining.qml  main.qml  strategy.qml
src/ui/styles/: dark_orange.cpp  dark_orange.hpp  material_dark.cpp  material_dark.hpp
testing/: CMakeLists.txt
testing/common/: apply_tests.cpp  atomic_data_tests.cpp  blocking_queue_tests.cpp  dual_grpc_client_tests.cpp  grpc_client_tests.cpp  grpc_server_tests.cpp
testing/gvs/net/: client_state_tests.cpp  dual_grpc_client_tests.cpp  grpc_client_tests.cpp  grpc_server_tests.cpp  multi_client_grpc_server_tests.cpp
testing/gvs/server/: scene_server_tests.cpp  scene_service_tests.cpp
testing/gvs/util/: apply_tests.cpp  atomic_data_tests.cpp  blocking_queue_tests.cpp  callback_handler_tests.cpp
testing/gvs/vis-client/: vis_client_tests.cpp
testing/server/: scene_service_tests.cpp
testing/test-util/: scene_server.hpp  test_proto_util.hpp  test_server.cpp  test_server.hpp  test_service.cpp  test_service.hpp
(+32 files in other folders)
